  on the stack instead of in a temporary variable (patch by Jeffrey Yaskin)

- Issue #2238: Some syntax errors in *args and **kwargs expressions could give
  bogus error messages.

- Issue #2143: Fix embedded readline() hang on SSL socket EOF.

Extensions Modules
------------------

- Patch #2240: Implement signal.setitimer and signal.getitimer.

Library
-------

- Issue #2248: return the result of the QUIT command. from SMTP.quit().

- Backport of Python 3.0's io module.

- Issue #2482: Make sure that the coefficient of a Decimal is always
  stored as a str instance, not as a unicode instance.  This ensures
  that str(Decimal) is always an instance of str.

- Issue #2478: fix failure of decimal.Decimal(0).sqrt()

- Issue #2432: give DictReader the dialect and line_num attributes
  advertised in the docs.

- Issue #2460:  Make Ellipsis object copyable.

- Issue #1681432:  Add triangular distribution to the random module

- Issue #2136: urllib2's auth handler now allows single-quoted realms in the
  WWW-Authenticate header.

- Issue #2434: Enhanced platform.win32_ver() to also work on Python
  installation which do not have the win32all package installed.

- Added support to platform.uname() to also report the machine
  and processor information on Windows XP and later. As a result,
  platform.machine() and platform.processor() will report this
  information as well.

- The library implementing the 2to3 conversion, lib2to3, was added
  to the standard distribution.

- Issue #1747858: Fix chown to work with large uid's and gid's on 64-bit
  platforms.

- Issue #1202: zlib.crc32 and zlib.adler32 no longer return different values
  on 32-bit vs. 64-bit python interpreters.  Both were correct, but they now
  both return a signed integer object for consistency.

- Issue #1158: add %f format (fractions of a second represented as
  microseconds) to datetime objects.  Understood by both strptime and
  strftime.
